menu list added

--- a/03.HTML-CSS/index.html
+++ b/03.HTML-CSS/index.html
@@ -1,15 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
   <title>Coffee Shop Menu</title>
 </head>
+
 <body>
   <div class="header">
     <h1>Bean & Brew Cafe</h1>
     <p>Discover our selection of drinks and snacks.</p>
   </div>
+
+  <ul class="menu-list">
+    <li>Espresso</li>
+    <li>Cappuccino</li>
+    <li>Latte</li>
+    <li>Croissant</li>
+    <li>Blueberry Muffin</li>
+    <li>Matcha Cookie</li>
+  </ul>
+  
 </body>
+
 </html>
